--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@solana-developers/helpers": "^2.3.0",
+    "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.91.8",
     "bs58": "^5.0.0",
     "esrun": "^3.2.26",
