Homework, create mulisig mint authority and mint some tokens

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,21 @@ SECRET_KEY="[
    46, 141,  55, 249, 186, 116,  95, 222, 111,  78, 219,
    75,  22,  81, 104,   6,  72, 131, 190,  68
 ]"
+
+SECRET_KEY2="[
+  151,  81, 180, 180, 143,   2, 198, 163, 177, 144, 140,
+   19, 111, 208,  79,  65, 141, 124,  64, 246,  38,  20,
+  134, 131, 183, 122, 162,  80, 189,  87, 161, 109,  66,
+   86, 244,  80, 140,  66, 213, 206, 145,  52, 154,  42,
+  116,  45, 152, 212, 217,  45,  11, 160,  86, 144, 192,
+  148,  49, 156, 205,  59,  69, 117, 151, 227
+]"
+
+SECRET_KEY3="[
+   66,  91, 225, 136,  10, 138, 218,   7, 159,  14,   9,
+  142, 164, 127, 162,  12,   7, 198,  99, 194, 113, 124,
+  231, 192, 193,  20, 234,  52,  76, 142,  82, 113, 112,
+  180,  60, 220, 129,  91,  42, 115, 117,  14, 176, 229,
+  158, 150,   8, 193, 200,  24, 184,   8, 115,  96, 117,
+  168,  96,  63,  23, 126, 218, 251,  12, 175
+]"
