Partial sign transaction with durable nonce

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,12 @@ SECRET_KEY3="[
   158, 150,   8, 193, 200,  24, 184,   8, 115,  96, 117,
   168,  96,  63,  23, 126, 218, 251,  12, 175
 ]"
+
+NONCE_ACCOUNT_KEY="[
+   87,  98, 138,  90, 184, 106,  31, 201, 178, 222,  33,
+  149, 255, 158,  61, 191,  74,  15, 210,  78,  91, 180,
+  208, 162, 206, 167, 110, 152, 108, 203,  14, 127, 199,
+  201,  83, 156, 172, 122,  91,  79,  67,  52,  66, 162,
+  202, 141, 105,  76, 170, 159,  48, 229, 184,  50,  58,
+  194, 150,  58, 207, 100,  99, 150, 158, 118
+]"
